[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://ui/minigames/DealDuel.gd" id="1"]
[ext_resource type="Script" path="res://ui/minigames/LeverageMeter.gd" id="2"]

[node name="DealDuel" type="CanvasLayer"]
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
offset_left = -500.0
offset_top = -180.0
offset_right = 500.0
offset_bottom = 180.0

[node name="HBox" type="HBoxContainer" parent="Panel"]
offset_left = 40.0
offset_top = 32.0
offset_right = 960.0
offset_bottom = 96.0

[node name="Offer" type="Button" parent="Panel/HBox"]
text = "Offer"

[node name="Pressure" type="Button" parent="Panel/HBox"]
text = "Pressure"

[node name="Scheme" type="Button" parent="Panel/HBox"]
text = "Scheme"

[node name="ProgressBar" type="TextureProgressBar" parent="Panel"]
offset_left = 40.0
offset_top = 110.0
offset_right = 960.0
offset_bottom = 150.0

[node name="LeverageMeter" type="Control" parent="Panel"]
offset_left = 40.0
offset_top = 8.0
offset_right = 960.0
offset_bottom = 40.0
custom_minimum_size = Vector2(0, 24)
script = ExtResource("2")

[node name="QTEWindow" type="ColorRect" parent="Panel"]
offset_left = 300.0
offset_top = 90.0
offset_right = 420.0
offset_bottom = 170.0
color = Color(0.3, 0.8, 0.4, 0.8)
visible = false

[node name="QTEPerfect" type="ColorRect" parent="Panel"]
offset_left = 350.0
offset_top = 95.0
offset_right = 370.0
offset_bottom = 165.0
color = Color(0.95, 0.9, 0.2, 0.9)
visible = false

[node name="QTEHitMarker" type="ColorRect" parent="Panel"]
offset_left = 500.0
offset_top = 88.0
offset_right = 504.0
offset_bottom = 172.0
color = Color(1, 1, 1, 0.95)
visible = false

[node name="Needle" type="ColorRect" parent="Panel"]
offset_left = 40.0
offset_top = 90.0
offset_right = 48.0
offset_bottom = 170.0
color = Color(0.95, 0.95, 0.2, 0.9)
visible = false

[node name="Label" type="Label" parent="Panel"]
offset_left = 40.0
offset_top = 152.0
offset_right = 960.0
offset_bottom = 320.0
text = ""
autowrap_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

